--- a/s/WebContent/partials/scoreMonitor.html
+++ b/s/WebContent/partials/scoreMonitor.html
@@ -91,7 +91,7 @@
 
 					<th
 						ng-repeat="contestorScore in contestors[0].contestorScores | getOnlyRoleFilter:'[3,4]' | orderBy: 'judge.role.idrole' | limitTo: 1">
-						{{contestorScore.judge.staff.idstaff}}<div ng-show="showJudge">-{{contestorScore.judge.staff.chineseLastName}}{{contestorScore.judge.staff.chineseFirstName}}-{{contestorScore.judge.role.name}}</div>
+						<div ng-show="showJudge">{{contestorScore.judge.staff.idstaff}}<br>-{{contestorScore.judge.staff.chineseLastName}}{{contestorScore.judge.staff.chineseFirstName}}-{{contestorScore.judge.role.name}}</div>
 						<table border="1">
 							<thead>
 								<tr>
